tich hợp google analytis

--- a/user/public/index.html
+++ b/user/public/index.html
@@ -32,6 +32,14 @@
     <link rel="apple-touch-icon" href="./images/logo2.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QE1MKDMCHB"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+
+      gtag('config', 'G-QE1MKDMCHB');
+    </script>
     <title>BaloStore</title>
   </head>
   <body>
