--- a/user/public/index.html
+++ b/user/public/index.html
@@ -25,10 +25,11 @@
     href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
     />
     <meta name="theme-color" content="#000000" />
-    <meta
-    name="description"
-    content="BaloStore"
-    />
+  <meta name="keywords"
+    content="Thế giới di động, Thegioididong, điện thoại di động, dtdd, smartphone, tablet, máy tính bảng, laptop, máy tính xách tay, phụ kiện, smartwatch, đồng hồ, tin công nghệ" />
+  <meta name="description"
+    content="Hệ thống bán lẻ điện thoại di động, smartphone, máy tính bảng, tablet, laptop, phụ kiện, smartwatch, đồng hồ chính hãng mới nhất, giá tốt, dịch vụ khách hàng được yêu thích nhất VN" />
+  <meta property="og:title" content="Thegioididong.com - Điện thoại, Laptop, Phụ kiện, Đồng hồ chính hãng" />
     <link rel="apple-touch-icon" href="./images/logo2.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
