doi the meta xem

--- a/user/public/index.html
+++ b/user/public/index.html
@@ -25,11 +25,16 @@
     href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
     />
     <meta name="theme-color" content="#000000" />
-  <meta name="keywords"
-    content="Thế giới di động, Thegioididong, điện thoại di động, dtdd, smartphone, tablet, máy tính bảng, laptop, máy tính xách tay, phụ kiện, smartwatch, đồng hồ, tin công nghệ" />
-  <meta name="description"
-    content="Hệ thống bán lẻ điện thoại di động, smartphone, máy tính bảng, tablet, laptop, phụ kiện, smartwatch, đồng hồ chính hãng mới nhất, giá tốt, dịch vụ khách hàng được yêu thích nhất VN" />
-  <meta property="og:title" content="Thegioididong.com - Điện thoại, Laptop, Phụ kiện, Đồng hồ chính hãng" />
+  <!-- Google / Search Engine Tags -->
+  <meta itemprop="name" content="BALO STORE">
+  <meta itemprop="description" content="">
+  <meta itemprop="image" content="https://www.careerbox.vn/logo.png?v=30052023143238">
+  
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://balostore.vercel.app/news/6400baaf5e50e90d732c7f81">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="BALO STORE">
+  <meta property="og:description" content="Top 7 thương hiệu balo local brand giá rẻ làm mưa làm gió trên thị trường">
     <link rel="apple-touch-icon" href="./images/logo2.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
