--- a/user/public/index.html
+++ b/user/public/index.html
@@ -28,7 +28,7 @@
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="BALO STORE">
   <meta itemprop="description" content="">
-  <meta itemprop="image" content="https://www.careerbox.vn/logo.png?v=30052023143238">
+  <meta itemprop="image" content="./images/logo2.png">
   
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://balostore.vercel.app/news/6400baaf5e50e90d732c7f81">
