sửa content user

--- a/user/public/index.html
+++ b/user/public/index.html
@@ -28,13 +28,13 @@
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="BALO STORE">
   <meta itemprop="description" content="">
-  <meta itemprop="image" content="./images/logo2.png">
+  <meta itemprop="image" content="https://balostore.vercel.app/images/logo2.png">
   
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://balostore.vercel.app/news/6400baaf5e50e90d732c7f81">
   <meta property="og:type" content="website">
   <meta property="og:title" content="BALO STORE">
-  <meta property="og:description" content="Top 7 thương hiệu balo local brand giá rẻ làm mưa làm gió trên thị trường">
+  <meta property="og:description" content="BaloStore cung cấp những chiếc balo tốt nhất và bền nhất">
     <link rel="apple-touch-icon" href="./images/logo2.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
